--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body class="">
     
-            <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
+            <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top d-block" >
                 <div class="container">
                   <a class="navbar-brand" href="#">Frontend Bootcamp</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +45,7 @@
 
     <!-- Showcase section Start -->
 
-    <section class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start showcase-mar">
+    <section class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start showcase-mar d-block" id="footer-to-top">
         <div class="container d-sm-flex justify-content-between align-items-center showcase-reverse">
             <div class="">
                 <h1 class="pt-3">Become a <span class="text-warning">Web Developer</span></h1>
@@ -404,7 +404,7 @@
       <section class="bg-dark text-light p-5 text-center position-relative">
         <div class="container">
           <p class="lead footer-text">Copyright © 2021 Frontend Bootcamp</p>
-          <a href="#" class="position-absolute bottom-0 end-0 p-5">
+          <a href="#footer-to-top" class="position-absolute bottom-0 end-0 p-5">
             <i class="bi bi-arrow-up-circle h1"></i>
           </a>
         </div>
